--- a/club.html
+++ b/club.html
@@ -49,7 +49,7 @@
     .nbrh-nav a:hover{ color:var(--brand); }
 
     /* Page container (no header offset needed with sticky header) */
-    .page-container{max-width:1200px; margin:0 auto; padding:16px 20px 20px; position:relative;}
+    .page-container{max-width:1200px; margin:0 auto; padding:16px 20px 100px; position:relative;}
 
     /* Loading / Error */
     .loading{text-align:center; padding:40px 20px; color:#8e8e93;}
@@ -140,10 +140,10 @@
     .faq-answer b, .faq-answer strong { font-weight:400 !important; }
 
     /* About & Coach */
-    .about-card .about-content{display:grid; grid-template-columns:2fr 1fr; gap:20px; align-items:start;}
+    .about-card .about-content{display:grid; grid-template-columns:2fr 1fr; gap:32px; align-items:start;}
     .about-text{line-height:1.7; color:#1c1c1e; font-size:16px;}
     .about-sidebar{display:flex; flex-direction:column; gap:16px;}
-    .coach-info{background:#f8f9fa; border-radius:3px; padding:16px; display:flex; align-items:center;}
+    .coach-info{background:#f8f9fa; border-radius:3px; padding:16px; display:flex; align-items:center; margin-top:16px;}
     .coach-avatar{width:52px; height:52px; border-radius:50%; background:var(--brand); color:#fff; display:flex; align-items:center; justify-content:center; font-weight:800; font-size:18px; margin-right:14px;}
     .coach-details h4{font-size:16px; font-weight:800; color:#1c1c1e; margin-bottom:4px;}
     .coach-details p{font-size:13px; color:#8e8e93;}
@@ -167,7 +167,7 @@
     .sticky-cta:hover{background:var(--brand-dark); transform:translateX(-50%) translateY(-2px); box-shadow:0 10px 28px rgba(255,0,110,.45);}
 
     @media (max-width:768px){
-      .page-container{padding:12px 15px 15px;}
+      .page-container{padding:12px 15px 120px;}
       .content-grid{gap:14px; margin-bottom:24px;}
       .hero-title{font-size:26px;}
       .hero-subtitle{font-size:16px;}
@@ -178,9 +178,10 @@
       .testimonials-grid{grid-template-columns:1fr; gap:12px;}
       .benefits-grid{grid-template-columns:1fr; gap:12px;}
       .faq-grid{grid-template-columns:1fr; gap:12px;}
-      .about-card .about-content{grid-template-columns:1fr; gap:16px;}
+      .about-card .about-content{grid-template-columns:1fr; gap:24px;}
       .contact-grid{grid-template-columns:1fr;}
       .sticky-cta{left:20px; right:20px; transform:none; width:calc(100% - 40px); justify-content:center;}
+      .coach-info{margin-top:20px;}
     }
   </style>
 </head>
@@ -204,7 +205,7 @@
 
     <div id="error" class="error" style="display:none;">
       <h2>Club Not Found</h2>
-      <p>The club you’re looking for doesn’t exist or is no longer available.</p>
+      <p>The club you're looking for doesn't exist or is no longer available.</p>
       <a href="/" style="color:#ff3b30; text-decoration:underline;">Browse all clubs</a>
     </div>
 
@@ -611,7 +612,7 @@
               <div class="stars">${st}</div>
               <div class="testimonial-author">${t.author || ''}</div>
             </div>
-            <div class="testimonial-text">“${t.text || ''}”</div>
+            <div class="testimonial-text">"${t.text || ''}"</div>
           `;
           tg.appendChild(el);
         });
