--- a/club.html
+++ b/club.html
@@ -49,7 +49,7 @@
     .nbrh-nav a:hover{ color:var(--brand); }
 
     /* Page container */
-    .page-container{max-width:1200px; margin:0 auto; padding:0 20px 100px; position:relative;}
+    .page-container{max-width:1200px; margin:0 auto; padding:0 0 100px; position:relative;}
 
     /* Loading / Error */
     .loading{text-align:center; padding:40px 20px; color:#8e8e93;}
@@ -59,6 +59,9 @@
 
     /* Layout and card spacing */
     .content-grid{display:grid; gap:18px; margin-bottom:28px;}
+    .content-grid > .card:not(.hero-card) {
+      margin: 0 20px;
+    }
     .card{background:#fff; border-radius:3px; box-shadow:0 3px 14px rgba(0,0,0,0.08); overflow:hidden; transition:transform .25s, box-shadow .25s;}
     .card:hover{transform:translateY(-3px); box-shadow:0 6px 18px rgba(0,0,0,0.12);}
     .card-content{padding:20px;}
@@ -68,14 +71,7 @@
       background:linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)), url('https://images.unsplash.com/photo-1552667466-07770ae110d0?auto=format&fit=crop&w=1200&q=80');
       background-size:cover; background-position:center;
       color:#fff; text-align:center; padding:60px 20px;
-      /* Remove from card flow */
-      margin-left: calc(-50vw + 50%);
-      margin-right: calc(-50vw + 50%);
-      width: 100vw;
-      position: relative;
-      left: 50%;
-      right: 50%;
-      transform: translateX(-50%);
+      width: 100%;
       border-radius: 0;
       box-shadow: none;
       min-height: 400px;
@@ -85,7 +81,8 @@
       align-items: center;
     }
     .hero-card:hover{
-      transform: translateX(-50%);
+      transform: none;
+      box-shadow: none;
     }
     .club-logo{width:120px; height:120px; border-radius:12px; margin:0 auto 20px; background:rgba(255,255,255,.95); display:flex; align-items:center; justify-content:center; font-size:48px; color:#333; font-weight:600; box-shadow:0 8px 24px rgba(0,0,0,0.3); overflow:hidden;}
     .club-logo img{width:100%; height:100%; object-fit:cover;}
@@ -93,7 +90,7 @@
     .hero-subtitle{font-size:18px; opacity:.95; margin-bottom:28px;}
     .hero-buttons{display:flex; gap:12px; justify-content:center; flex-wrap:wrap;}
     .hero-cta{
-      background:var(--brand); color:#fff; border:none; padding:14px 28px; font-size:16px; font-weight:700; border-radius:24px; cursor:pointer; text-decoration:none; display:inline-block; transition:all .25s; box-shadow:0 4px 12px rgba(255,0,110,.3);
+      background:var(--brand); color:#fff; border:none; padding:14px 28px; font-size:16px; font-weight:700; border-radius:3px; cursor:pointer; text-decoration:none; display:inline-block; transition:all .25s; box-shadow:0 4px 12px rgba(255,0,110,.3);
     }
     .hero-cta:hover{background:var(--brand-dark); transform:translateY(-1px); box-shadow:0 6px 16px rgba(255,0,110,.4);}
     .hero-cta.secondary{
@@ -184,7 +181,7 @@
     .sticky-cta{
       position:fixed; bottom:20px; left:50%; transform:translateX(-50%);
       background:var(--brand); color:#fff; border:none; padding:16px 28px;
-      font-size:16px; font-weight:800; border-radius:24px; cursor:pointer;
+      font-size:16px; font-weight:800; border-radius:3px; cursor:pointer;
       box-shadow:0 8px 24px rgba(255,0,110,.35); z-index:1000; display:none;
       text-decoration:none; white-space:nowrap; transition:all .25s;
       display:flex; align-items:center; justify-content:center; text-align:center;
@@ -192,8 +189,11 @@
     .sticky-cta:hover{background:var(--brand-dark); transform:translateX(-50%) translateY(-2px); box-shadow:0 10px 28px rgba(255,0,110,.45);}
 
     @media (max-width:768px){
-      .page-container{padding:0 15px 120px;}
+      .page-container{padding:0 0 120px;}
       .content-grid{gap:14px; margin-bottom:24px;}
+      .content-grid > .card:not(.hero-card) {
+        margin: 0 15px;
+      }
       
       /* Mobile hero - taller and Apple Music style */
       .hero-card{
