--- a/club.html
+++ b/club.html
@@ -66,11 +66,11 @@
     .card:hover{transform:translateY(-3px); box-shadow:0 6px 18px rgba(0,0,0,0.12);}
     .card-content{padding:20px;}
 
-    /* Hero - FULL WIDTH */
+    /* Hero - FULL WIDTH with blend effect */
     .hero-card{
       background:linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)), url('https://images.unsplash.com/photo-1552667466-07770ae110d0?auto=format&fit=crop&w=1200&q=80');
       background-size:cover; background-position:center;
-      color:#fff; text-align:center; padding:60px 20px;
+      color:#fff; text-align:center; padding:60px 20px 120px;
       width: 100%;
       border-radius: 0;
       box-shadow: none;
@@ -79,14 +79,27 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      position: relative;
     }
     .hero-card:hover{
       transform: none;
       box-shadow: none;
     }
-    .club-logo{width:120px; height:120px; border-radius:12px; margin:0 auto 20px; background:rgba(255,255,255,.95); display:flex; align-items:center; justify-content:center; font-size:48px; color:#333; font-weight:600; box-shadow:0 8px 24px rgba(0,0,0,0.3); overflow:hidden;}
+    /* Gradient blend effect at bottom */
+    .hero-card::after{
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 150px;
+      background: linear-gradient(to bottom, rgba(245,247,250,0) 0%, rgba(245,247,250,0.3) 30%, rgba(245,247,250,0.7) 60%, #f5f7fa 100%);
+      pointer-events: none;
+      z-index: 1;
+    }
+    .club-logo{width:120px; height:120px; border-radius:12px; margin:0 auto 20px; background:rgba(255,255,255,.95); display:flex; align-items:center; justify-content:center; font-size:48px; color:#333; font-weight:600; box-shadow:0 8px 24px rgba(0,0,0,0.3); overflow:hidden; position:relative; z-index:2;}
     .club-logo img{width:100%; height:100%; object-fit:cover;}
-    .hero-title{font-size:32px; font-weight:700; margin-bottom:12px;}
+    .hero-title{font-size:32px; font-weight:700; margin-bottom:12px; position:relative; z-index:2;}
     .hero-category-tag{
       display:inline-block;
       background:rgba(255,255,255,.2);
@@ -98,9 +111,11 @@
       margin-bottom:12px;
       backdrop-filter:blur(10px);
       border:1px solid rgba(255,255,255,.3);
+      position:relative;
+      z-index:2;
     }
-    .hero-subtitle{font-size:16px; opacity:.95; margin-bottom:28px; max-width:600px;}
-    .hero-buttons{display:flex; gap:12px; justify-content:center; flex-wrap:wrap;}
+    .hero-subtitle{font-size:16px; opacity:.95; margin-bottom:28px; max-width:600px; position:relative; z-index:2;}
+    .hero-buttons{display:flex; gap:12px; justify-content:center; flex-wrap:wrap; position:relative; z-index:2;}
     .hero-cta{
       background:var(--brand); color:#fff; border:none; padding:14px 28px; font-size:16px; font-weight:700; border-radius:3px; cursor:pointer; text-decoration:none; display:inline-block; transition:all .25s; box-shadow:0 4px 12px rgba(255,0,110,.3);
     }
@@ -210,7 +225,10 @@
       /* Mobile hero - taller and Apple Music style */
       .hero-card{
         min-height: 70vh;
-        padding: 40px 20px;
+        padding: 40px 20px 100px;
+      }
+      .hero-card::after{
+        height: 120px;
       }
       .club-logo{
         width: 200px;
@@ -282,7 +300,6 @@
         <span class="hero-category-tag" id="clubActivity">Activity Type</span>
         <p class="hero-subtitle" id="clubSnippet"></p>
         <div class="hero-buttons">
-          <a href="#membership" class="hero-cta" id="joinButton">Join The Club</a>
           <a href="#" class="hero-cta secondary" id="reviewButton" style="display:none;" target="_blank" rel="noopener">
             <i class="fas fa-star" style="margin-right:8px;"></i>Review
           </a>
@@ -592,17 +609,12 @@
         snippetEl.style.display = 'none';
       }
 
-      // CTAs - Main Join Button
-      const joinBtn = document.getElementById('joinButton');
+      // CTAs - Sticky Join Button Only
       const sticky = document.getElementById('stickyCta');
       if (d.booking_url){
-        joinBtn.href = d.booking_url;
-        joinBtn.target = '_blank';
-        joinBtn.rel = 'noopener';
         sticky.href = d.booking_url;
         sticky.style.display = 'inline-flex';
       } else {
-        joinBtn.style.display = 'none';
         sticky.style.display = 'none';
       }
 
