--- a/club.html
+++ b/club.html
@@ -110,7 +110,7 @@
     .hero-title{font-size:32px; font-weight:700; margin:0; line-height:1.2;}
     .hero-verified-badge{
       display:inline-flex; align-items:center; justify-content:center;
-      width:32px; height:32px; background:var(--verified-blue); border-radius:50%;
+      width:32px; height:32px; background:#FF006E; border-radius:50%;
       flex-shrink:0; box-shadow:0 4px 12px rgba(29,161,242,0.4);
     }
     .hero-verified-badge svg{
