Change verification badge color to #FF006E

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   /* ---------- Verification badge (top-right) ---------- */
   .club-verified-badge{
     position:absolute; top:12px; right:12px;
-    background:rgba(29,161,242,0.95); color:#fff; padding:6px 10px;
+    background:#FF006E; color:#fff; padding:6px 10px;
     border-radius:3px; font-size:12px; font-weight:600; z-index:4;
     box-shadow:0 2px 8px rgba(0,0,0,0.2); backdrop-filter:blur(10px);
     display:flex; align-items:center; gap:4px;
