--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     display:flex; align-items:center; gap:4px;
   }
   .club-verified-badge svg{
-    width:14px; height:14px; fill:currentColor;
+    width:14px; height:14px; fill:#FF006E;
   }
 
   /* ---------- Card content ---------- */
