--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     display:flex; align-items:center; gap:4px;
   }
   .club-verified-badge svg{
-    width:14px; height:14px; fill:#FF006E;
+    width:14px; height:14px; fill:currentColor;
   }
 
   /* ---------- Card content ---------- */
@@ -186,7 +186,7 @@
   .club-title{ font-size:18px; font-weight:600; color:var(--text); line-height:1.3; margin:0; }
   .club-title-verified{
     display:inline-flex; align-items:center; justify-content:center;
-    width:18px; height:18px; background:var(--verified-blue); border-radius:50%;
+    width:18px; height:18px; background:#FF006E; border-radius:50%;
     flex-shrink:0;
   }
   .club-title-verified svg{
